--- a/NovoSiteIWI/index.html
+++ b/NovoSiteIWI/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ENIAC</title>
     <link rel="stylesheet" href="CssExternoNovoSite/style.css">
+    <link rel="shortcut icon" href="ImagensIWI/Favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -25,12 +26,13 @@
             </nav>
         </div>
     </header>
-    <section id="inicio">
-        <h1>O ENIAC (Electronic Numerical Integrator and Computer) foi o primeiro computador eletrônico de uso geral da história. Ele foi desenvolvido durante a Segunda Guerra Mundial com o objetivo de realizar cálculos balísticos para o Exército dos Estados Unidos. O projeto começou em 1943 e foi finalizado em 1945, sendo apresentado oficialmente ao público em 1946.</h1>
+    <section id="inicio" class="banner">
+       
 
     </section>
     <main>
         <section id="historia">
+            <h2>História</h2>
             <p>O ENIAC foi criado por dois engenheiros americanos: John Presper Eckert e John Mauchly, na Universidade da Pensilvânia. Na época, o exército precisava de uma máquina mais rápida e precisa para calcular trajetórias de projéteis. O ENIAC surgiu como uma revolução, substituindo os cálculos manuais e as máquinas eletromecânicas da época. Embora tenha sido concluído apenas no final da guerra, ele marcou o início da era da computação moderna.</p>
 
         </section>
