--- a/NovoSiteIWI/index.html
+++ b/NovoSiteIWI/index.html
@@ -51,27 +51,27 @@
         </section>
         <section id="caracteristicas">
 
-            <h1>Características</h1>
+            <h1 class="centro">Características</h1>
             <div class="container">
                 <div class="item">
                     <div class="card"><img class="imgcard" src="ImagensIWI/Img/Flux_Dev_Create_an_image_featuring_the_historic_ENIAC_computer_1.jpg" alt=""></div>
-                    <h1 class="imgcard_title">Tamanho e Peso</h1>
-                    <p>O ENIAC (Electronic Numerical Integrator and Computer) era um computador colossal, ocupando cerca de 167 m² e pesando 27 toneladas. Sua estrutura era composta por 40 painéis distribuídos em forma de "U", exigindo um espaço enorme para operação.</p>
+                    <h3 class="imgcard_title">Tamanho e Peso</h3>
+                    <p class="imgcard_text">O ENIAC (Electronic Numerical Integrator and Computer) era um computador colossal, ocupando cerca de 167 m² e pesando 27 toneladas. Sua estrutura era composta por 40 painéis distribuídos em forma de "U", exigindo um espaço enorme para operação.</p>
                 </div>
                 <div class="item">
                     <div class="card"><img class="imgcard" src="ImagensIWI/Img/Flux_Dev_Create_an_image_featuring_the_historic_ENIAC_computer_0.jpg" alt=""></div>
-                    <h1 class="imgcard_title">Consumo de Energia e Aquecimento</h1>
-                    <p>O ENIAC consumia aproximadamente 150 kW de eletricidade, energia suficiente para alimentar centenas de residências. O calor gerado por suas 17.468 válvulas termiônicas exigia um sistema de ventilação especial para evitar falhas.</p>
+                    <h3 class="imgcard_title">Consumo de Energia e Aquecimento</h3>
+                    <p class="imgcard_text">O ENIAC consumia aproximadamente 150 kW de eletricidade, energia suficiente para alimentar centenas de residências. O calor gerado por suas 17.468 válvulas termiônicas exigia um sistema de ventilação especial para evitar falhas.</p>
                 </div>
                 <div class="item">
                     <div class="card"><img class="imgcard" src="ImagensIWI/Img/Flux_Dev_Create_an_image_featuring_the_historic_ENIAC_computer_2.jpg" alt=""></div>
-                    <h1 class="imgcard_title">Programação Manual por Cabos e Chaves</h1>
-                    <p>Diferente dos computadores modernos, o ENIAC não armazenava programas. Em vez disso, sua programação era feita manualmente, reconectando cabos e ajustando chaves, um processo que podia levar dias para cada nova tarefa.</p>
+                    <h3 class="imgcard_title">Programação Manual por Cabos e Chaves</h3>
+                    <p class="imgcard_text">Diferente dos computadores modernos, o ENIAC não armazenava programas. Em vez disso, sua programação era feita manualmente, reconectando cabos e ajustando chaves, um processo que podia levar dias para cada nova tarefa.</p>
                 </div>
                 <div class="item">
                     <div class="card"><img class="imgcard" src="ImagensIWI/Img/Flux_Dev_Create_an_image_featuring_the_historic_ENIAC_computer_3.jpg" alt=""></div>
-                    <h1 class="imgcard_title">Tamanho e Peso</h1>
-                    <p>O ENIAC (Electronic Numerical Integrator and Computer) era um computador colossal, ocupando cerca de 167 m² e pesando 27 toneladas. Sua estrutura era composta por 40 painéis distribuídos em forma de "U", exigindo um espaço enorme para operação.</p>
+                    <h3 class="imgcard_title">Tamanho e Peso</h3>
+                    <p class="imgcard_text">O ENIAC (Electronic Numerical Integrator and Computer) era um computador colossal, ocupando cerca de 167 m² e pesando 27 toneladas. Sua estrutura era composta por 40 painéis distribuídos em forma de "U", exigindo um espaço enorme para operação.</p>
                 </div>
             </div>
         </section>
