--- a/NovoSiteIWI/index.html
+++ b/NovoSiteIWI/index.html
@@ -62,6 +62,7 @@
                     <div class="card"><img class="imgcard" src="ImagensIWI/Img/Flux_Dev_Create_an_image_featuring_the_historic_ENIAC_computer_0.jpg" alt=""></div>
                     <h3 class="imgcard_title">Consumo de Energia e Aquecimento</h3>
                     <p class="imgcard_text">O ENIAC consumia aproximadamente 150 kW de eletricidade, energia suficiente para alimentar centenas de residências. O calor gerado por suas 17.468 válvulas termiônicas exigia um sistema de ventilação especial para evitar falhas.</p>
+                    <a href="#modal1" class="btn">Saiba Mais</a>
                 </div>
                 <div class="item">
                     <div class="card"><img class="imgcard" src="ImagensIWI/Img/Flux_Dev_Create_an_image_featuring_the_historic_ENIAC_computer_2.jpg" alt=""></div>
@@ -99,6 +100,18 @@
     </main>
     <footer>2025 - Site desenvolvido por Bruno F. Santos - ETEC MCM - Todos os Direitos Reservados</footer>
     
+    <div class="card-modal">
+        <div id="modal1" class="modal">
+            <div class="modal-content">
+                <h3>Mais detalhes do Consumo de Energia e Aquecimento</h3>
+                <p>O ENIAC (Electronic Numerical Integrator and Computer), o primeiro computador eletrônico digital, consumia cerca de 150 quilowatts de energia elétrica. Essa grande quantidade de energia, equivalente ao consumo de uma pequena cidade, era necessária para alimentar as milhares de válvulas de vácuo que compunham a máquina. O calor gerado pelo ENIAC era tão intenso que a temperatura ambiente no local onde ele estava instalado chegava a 49°C. Para dissipar o calor, foram utilizados dois ventiladores de 20 cavalos de potência, que, no entanto, nem sempre eram suficientes para evitar que as luzes da Filadélfia, onde o ENIAC estava instalado, diminuíssem ou até mesmo apagassem durante sua operação, de acordo com alguns relatos. </p>
+                <a href="#" onclick="history.back()" class="close-btn">Fechar</a>
+
+
+            </div>
+
+        </div>
+
+    </div>
 </body>
 </html>
-a
