--- a/NovoSiteIWI/index.html
+++ b/NovoSiteIWI/index.html
@@ -6,6 +6,10 @@
     <title>ENIAC</title>
     <link rel="stylesheet" href="CssExternoNovoSite/style.css">
     <link rel="shortcut icon" href="ImagensIWI/Favicon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Red+Rose:wght@300..700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -57,22 +61,25 @@
                     <div class="card"><img class="imgcard" src="ImagensIWI/Img/Flux_Dev_Create_an_image_featuring_the_historic_ENIAC_computer_1.jpg" alt=""></div>
                     <h3 class="imgcard_title">Tamanho e Peso</h3>
                     <p class="imgcard_text">O ENIAC (Electronic Numerical Integrator and Computer) era um computador colossal, ocupando cerca de 167 m² e pesando 27 toneladas. Sua estrutura era composta por 40 painéis distribuídos em forma de "U", exigindo um espaço enorme para operação.</p>
+                    <a href="#modal1" class="btn">Saiba Mais</a>
                 </div>
                 <div class="item">
                     <div class="card"><img class="imgcard" src="ImagensIWI/Img/Flux_Dev_Create_an_image_featuring_the_historic_ENIAC_computer_0.jpg" alt=""></div>
                     <h3 class="imgcard_title">Consumo de Energia e Aquecimento</h3>
                     <p class="imgcard_text">O ENIAC consumia aproximadamente 150 kW de eletricidade, energia suficiente para alimentar centenas de residências. O calor gerado por suas 17.468 válvulas termiônicas exigia um sistema de ventilação especial para evitar falhas.</p>
-                    <a href="#modal1" class="btn">Saiba Mais</a>
+                    <a href="#modal2" class="btn">Saiba Mais</a>
                 </div>
                 <div class="item">
                     <div class="card"><img class="imgcard" src="ImagensIWI/Img/Flux_Dev_Create_an_image_featuring_the_historic_ENIAC_computer_2.jpg" alt=""></div>
                     <h3 class="imgcard_title">Programação Manual por Cabos e Chaves</h3>
                     <p class="imgcard_text">Diferente dos computadores modernos, o ENIAC não armazenava programas. Em vez disso, sua programação era feita manualmente, reconectando cabos e ajustando chaves, um processo que podia levar dias para cada nova tarefa.</p>
+                    <a href="#modal3" class="btn">Saiba Mais</a>
                 </div>
                 <div class="item">
                     <div class="card"><img class="imgcard" src="ImagensIWI/Img/Flux_Dev_Create_an_image_featuring_the_historic_ENIAC_computer_3.jpg" alt=""></div>
                     <h3 class="imgcard_title">Tamanho e Peso</h3>
                     <p class="imgcard_text">O ENIAC (Electronic Numerical Integrator and Computer) era um computador colossal, ocupando cerca de 167 m² e pesando 27 toneladas. Sua estrutura era composta por 40 painéis distribuídos em forma de "U", exigindo um espaço enorme para operação.</p>
+                    <a href="#modal4" class="btn">Saiba Mais</a>
                 </div>
             </div>
         </section>
@@ -101,18 +108,52 @@
     <footer>2025 - Site desenvolvido por Bruno F. Santos - ETEC MCM - Todos os Direitos Reservados</footer>
     
     <div class="card-modal">
-        <div id="modal1" class="modal">
+
+        <div id="modal2" class="modal">
             <div class="modal-content">
-                <h3>Mais detalhes do Consumo de Energia e Aquecimento</h3>
-                <p>O ENIAC (Electronic Numerical Integrator and Computer), o primeiro computador eletrônico digital, consumia cerca de 150 quilowatts de energia elétrica. Essa grande quantidade de energia, equivalente ao consumo de uma pequena cidade, era necessária para alimentar as milhares de válvulas de vácuo que compunham a máquina. O calor gerado pelo ENIAC era tão intenso que a temperatura ambiente no local onde ele estava instalado chegava a 49°C. Para dissipar o calor, foram utilizados dois ventiladores de 20 cavalos de potência, que, no entanto, nem sempre eram suficientes para evitar que as luzes da Filadélfia, onde o ENIAC estava instalado, diminuíssem ou até mesmo apagassem durante sua operação, de acordo com alguns relatos. </p>
-                <a href="#" onclick="history.back()" class="close-btn">Fechar</a>
-
-
+                <h3>Tamanho e Peso do ENIAC: A Escala Física do Primeiro Computador Eletrônico</h3>
+                <p>O ENIAC (Electronic Numerical Integrator and Computer), finalizado em 1946, foi um dos mais ambiciosos projetos tecnológicos do século XX. Muito além de seu valor computacional, ele impressionava — e ainda impressiona — pelo seu porte físico gigantesco. Seu tamanho e peso são evidências do estado incipiente da tecnologia eletrônica da época e da ausência de miniaturização que hoje é tida como padrão.</p>
+                <h5>Dimensões Físicas</h5>
+                <p>O ENIAC ocupava uma área de aproximadamente 167 m², o equivalente ao espaço de uma residência de médio porte. Ele estava distribuído ao longo de um salão retangular, com seus componentes montados em 42 painéis metálicos de aproximadamente 2,75 metros de altura e cerca de 60 centímetros de largura cada.</p>
+                <p>Esses painéis eram organizados em formato de U, alinhados ao longo das paredes e corredores. Havia pouco espaço para circulação entre eles, e técnicos e operadores frequentemente trabalhavam em pé ou sentados em pequenas estações ao lado dos módulos.</p>
+                <p>Resumo das dimensões estimadas:</p>
+                <ul class="list_card">
+                    <li>Comprimento total dos painéis enfileirados: cerca de 26 metros lineares</li>
+                    <li>Altura dos painéis: ~2,75 metros</li>
+                    <li></li>
+                </ul>
             </div>
 
         </div>
 
+        <div id="modal2" class="modal">
+            <div class="modal-content">
+                <h3>Consumo de Energia e Aquecimento do ENIAC: O Gigante Energético da Computação</h3>
+                <p>O ENIAC (Electronic Numerical Integrator and Computer), construído entre 1943 e 1946, é amplamente reconhecido como o primeiro computador eletrônico de uso geral. Desenvolvido por John Presper Eckert e John William Mauchly, na Universidade da Pensilvânia, ele representou uma revolução tecnológica. No entanto, seu impacto não foi apenas funcional: o ENIAC também se destacou pelo enorme consumo de energia e pelos desafios térmicos associados ao seu funcionamento.</p>
+                <h5>Estrutura e Componentes de Alta Demanda Energética</h5>
+                <p>O ENIAC utilizava cerca de 17.468 válvulas termiônicas (tubos a vácuo), além de milhares de resistores, capacitores e relés eletromecânicos. Essas válvulas eram os principais elementos ativos do sistema, funcionando como os "transistores" da época, amplificando sinais e controlando o fluxo de corrente elétrica.</p>
+                <p>Cada válvula operava a altas temperaturas e exigia um fornecimento constante de energia elétrica para manter sua condução. Isso gerava uma demanda energética colossal para os padrões da época (e ainda significativa para os padrões atuais). O ENIAC consumia, em média, cerca de 150 kW (quilowatts) de potência elétrica contínua — equivalente ao consumo de cerca de 50 a 100 residências médias modernas.</p>
+                <h5>Problemas com Aquecimento</h5>
+                <p>O elevado consumo de energia se traduzia diretamente em produção de calor. Como a eficiência das válvulas era extremamente baixa, a maior parte da energia consumida era convertida em calor, e não em trabalho computacional útil.</p>
+                <p>Isso criava uma série de desafios térmicos:</p>
+                <ul class="list_card">
+                    <li>Temperaturas internas muito altas: o calor acumulado nas salas onde o ENIAC operava fazia com que o ambiente ficasse quase inabitável sem sistemas de ventilação forçada.</li>
+                    <li>Falhas frequentes: o calor era um dos principais responsáveis pelas falhas das válvulas. Estima-se que uma válvula queimava, em média, a cada poucos dias — o que exigia manutenção constante e monitoramento rigoroso.</li>
+                    <li>Necessidade de refrigeração ativa: o ENIAC precisou de sistemas de resfriamento por ar forçado e um projeto cuidadoso para evitar sobreaquecimento local, embora ainda estivesse longe dos padrões modernos de gerenciamento térmico.</li>
+                </ul>
+                <h5>Comparação com Computadores Atuais</h5>
+                <p>Para se ter uma ideia da ineficiência energética do ENIAC, considere que um smartphone moderno é milhões de vezes mais rápido e consome menos de 10 watts. Ou seja, os avanços em microeletrônica e eficiência energética desde os anos 1940 são impressionantes.</p>
+                <p>O ENIAC também marcou o início de um problema que persiste até hoje: o equilíbrio entre potência computacional e consumo de energia. Embora os computadores modernos sejam muito mais eficientes, os data centers atuais — que processam dados em nuvem e sustentam a internet — ainda enfrentam questões similares de consumo e aquecimento, em escala muito maior.</p>
+                <a href="#" onclick="history.back()" class="close-btn">Fechar</a>
+            </div>
+        </div>
+        <div id="modal2" class="modal">
+            <div class="modal-content">
+                <h3>Programação Manual por Cabos e Chaves: A Lógica Física do ENIAC</h3>
+
+            </div>
+        </div>>
+
     </div>
 </body>
 </html>
-a
