Adicionando mais CSS e texto

--- a/NovoSiteIWI/index.html
+++ b/NovoSiteIWI/index.html
@@ -109,7 +109,7 @@
     
     <div class="card-modal">
 
-        <div id="modal2" class="modal">
+        <div id="modal1" class="modal">
             <div class="modal-content">
                 <h3>Tamanho e Peso do ENIAC: A Escala Física do Primeiro Computador Eletrônico</h3>
                 <p>O ENIAC (Electronic Numerical Integrator and Computer), finalizado em 1946, foi um dos mais ambiciosos projetos tecnológicos do século XX. Muito além de seu valor computacional, ele impressionava — e ainda impressiona — pelo seu porte físico gigantesco. Seu tamanho e peso são evidências do estado incipiente da tecnologia eletrônica da época e da ausência de miniaturização que hoje é tida como padrão.</p>
@@ -147,12 +147,35 @@
                 <a href="#" onclick="history.back()" class="close-btn">Fechar</a>
             </div>
         </div>
-        <div id="modal2" class="modal">
+        <div id="modal3" class="modal">
             <div class="modal-content">
                 <h3>Programação Manual por Cabos e Chaves: A Lógica Física do ENIAC</h3>
+                <p>Antes dos sistemas operacionais, das linguagens de programação modernas e até mesmo do conceito de "software" como o conhecemos hoje, a programação de computadores era uma tarefa puramente física e manual. No caso do ENIAC, essa tarefa envolvia o uso de cabos conectores, chaves mecânicas e interruptores, o que tornava o processo extremamente trabalhoso e técnico.</p>
+                <h5>Como funcionava a programação do ENIAC</h5>
+                <p>O ENIAC não possuía memória interna de programa nem instruções armazenadas como os computadores modernos. Em vez disso, ele era uma máquina de propósito geral com arquitetura fixa, cujos comportamentos eram determinados fisicamente pela interconexão dos seus módulos.</p>
+                <p>A programação consistia basicamente em:</p>
+                <ul>
+                    <li>Conectar manualmente cabos entre módulos para definir o caminho dos dados e das instruções;</li>
+                    <li>Ajustar dezenas ou centenas de chaves rotativas e interruptores em painéis para configurar constantes, limites, operações e condições de controle;</li>
+                    <li>Sincronizar unidades de processamento para trabalhar de forma coordenada (como unidades de soma, multiplicação, armazenamento e controle de fluxo).</li>
+                </ul>
+                <p>Esse tipo de programação é chamado de programação física ou "plugboard programming", semelhante ao que também era usado nas antigas centrais telefônicas e em máquinas de cartões perfurados.</p>
+                <h5>Tempo e complexidade</h5>
+                <p>Programar uma nova tarefa no ENIAC não era algo rápido:</p>
+                <ul>
+                    <li>Podia levar dias ou semanas para reconfigurar completamente o sistema para uma nova operação complexa, como cálculos balísticos ou simulações matemáticas.</li>
+                    <li>A equipe precisava de diagramas esquemáticos detalhados do funcionamento lógico da máquina.</li>
+                    <li>Qualquer erro de conexão física — como um cabo mal encaixado ou uma chave ajustada incorretamente — podia causar falhas totais ou resultados errôneos.</li>
+                </ul>
+                <p>Por isso, programar o ENIAC exigia conhecimento técnico profundo, paciência e precisão.</p>
 
             </div>
         </div>>
+        <div id="modal4" class="modal">
+            <div class="modal-content">
+
+            </div>
+        </div>
 
     </div>
 </body>
