arrumando as modais e seus botões

--- a/NovoSiteIWI/index.html
+++ b/NovoSiteIWI/index.html
@@ -77,8 +77,8 @@
                 </div>
                 <div class="item">
                     <div class="card"><img class="imgcard" src="ImagensIWI/Img/Flux_Dev_Create_an_image_featuring_the_historic_ENIAC_computer_3.jpg" alt=""></div>
-                    <h3 class="imgcard_title">Tamanho e Peso</h3>
-                    <p class="imgcard_text">O ENIAC (Electronic Numerical Integrator and Computer) era um computador colossal, ocupando cerca de 167 m² e pesando 27 toneladas. Sua estrutura era composta por 40 painéis distribuídos em forma de "U", exigindo um espaço enorme para operação.</p>
+                    <h3 class="imgcard_title">Velocidade e Precisão</h3>
+                    <p class="imgcard_text">O ENIAC foi capaz de realizar até 5.000 operações por segundo, superando em muito as máquinas da época. Seu sistema permitia multiplicações, divisões e raízes quadradas com alta precisão, o que o tornou ideal para aplicações científicas e militares. Essa rapidez marcou o início da era digital.</p>
                     <a href="#modal4" class="btn">Saiba Mais</a>
                 </div>
             </div>
@@ -120,8 +120,8 @@
                 <ul class="list_card">
                     <li>Comprimento total dos painéis enfileirados: cerca de 26 metros lineares</li>
                     <li>Altura dos painéis: ~2,75 metros</li>
-                    <li></li>
                 </ul>
+                <a href="#" onclick="history.back()" class="close-btn">Fechar</a>
             </div>
 
         </div>
@@ -168,12 +168,17 @@
                     <li>Qualquer erro de conexão física — como um cabo mal encaixado ou uma chave ajustada incorretamente — podia causar falhas totais ou resultados errôneos.</li>
                 </ul>
                 <p>Por isso, programar o ENIAC exigia conhecimento técnico profundo, paciência e precisão.</p>
+                <a href="#" onclick="history.back()" class="close-btn">Fechar</a>
 
             </div>
         </div>>
         <div id="modal4" class="modal">
             <div class="modal-content">
-
+                <h3>Velocidade e Precisão: o Avanço que Revolucionou os Cálculos</h3>
+                <p>O ENIAC (Electronic Numerical Integrator and Computer) representou uma transformação radical na capacidade de processamento numérico do século XX. Ao utilizar válvulas eletrônicas em vez de relés eletromecânicos, ele foi capaz de atingir velocidades nunca antes vistas. Podia executar cerca de 5 mil somas ou subtrações por segundo, 385 multiplicações e 40 divisões nesse mesmo intervalo — algo revolucionário para a época.</p>
+                <p>Seu projeto contava com 20 acumuladores de 10 dígitos, que podiam operar em paralelo, permitindo a realização de cálculos simultâneos, uma inovação que antecipava o conceito de processamento paralelo. A precisão também era um destaque: os dados eram processados com uma exatidão de até dez dígitos decimais, um feito essencial para aplicações balísticas, científicas e meteorológicas da época.</p>
+                <p>Essa combinação entre alta velocidade e rigor numérico tornou o ENIAC indispensável para projetos complexos, como simulações de explosões, previsões meteorológicas e desenvolvimento de armamentos, abrindo caminho para a computação científica moderna.</p>
+                <a href="#" onclick="history.back()" class="close-btn">Fechar</a>
             </div>
         </div>
 
