--- a/NovoSiteIWI/index.html
+++ b/NovoSiteIWI/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                INFOTEC
+                <a href="index.html">INFOTEC</a>
 
             </div>
             <nav>
@@ -24,7 +24,7 @@
                     <li><a href="#historia">História do ENIAC</a></li>
                     <li><a href="#caracteristicas">Características e Funcionamento</a></li>
                     <li><a href="#galeria">Galeria de Imagens</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
 
             </nav>
@@ -116,7 +116,7 @@
 
         </section>
     </main>
-    <footer>2025 - Site desenvolvido por Bruno F. Santos - ETEC MCM - Todos os Direitos Reservados</footer>
+    <footer>2025 - Site desenvolvido por Bruno F. Santos - ETEC MCM - Todos os Direitos Reservados ©</footer>
     
     <div class="card-modal">
 
@@ -185,7 +185,7 @@
                 <a href="#" onclick="history.back()" class="close-btn">Fechar</a>
 
             </div>
-        </div>>
+        </div>
         <div id="modal4" class="modal">
             <div class="modal-content">
                 <h3>Velocidade e Precisão: o Avanço que Revolucionou os Cálculos</h3>
