--- a/NovoSiteIWI/succesful.html
+++ b/NovoSiteIWI/succesful.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Red+Rose:wght@300..700&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body class="pg-mensagem">
     <header>
         <div class="container">
             <div class="logo">
