--- a/NovoSiteIWI/index.html
+++ b/NovoSiteIWI/index.html
@@ -24,6 +24,7 @@
                     <li><a href="#historia">História do ENIAC</a></li>
                     <li><a href="#caracteristicas">Características e Funcionamento</a></li>
                     <li><a href="#galeria">Galeria de Imagens</a></li>
+                    <li><a href="jogo.html">Jogo</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
 
