--- a/NovoSiteIWI/succesful.html
+++ b/NovoSiteIWI/succesful.html
@@ -24,6 +24,7 @@
                     <li><a href="index.html#historia">História do ENIAC</a></li>
                     <li><a href="index.html#caracteristicas">Características e Funcionamento</a></li>
                     <li><a href="index.html#galeria">Galeria de Imagens</a></li>
+                    <li><a href="jogo.html">Jogo</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
 
