jogo não terminado 2

--- a/NovoSiteIWI/jogo.html
+++ b/NovoSiteIWI/jogo.html
@@ -37,10 +37,13 @@
 
     </section>
     <section id="areadojogo">
-        <div id="title">Jogo do ENIAC<br>Conserte o computador pegando os cabos!</div>
+        <div id="title">
+            <h1>Jogo do ENIAC</h1>
+            <h2>Conserte o computador pegando os cabos!</h2>
+        </div>
         <div id="gameArea">
-        <div id="player"></div>
-        <div id="cable"></div>
+            <div id="player"></div>
+            <div id="cable"></div>
         </div>
         <div id="score">Cabos conectados: 0</div>
     
