--- a/NovoSiteIWI/index.html
+++ b/NovoSiteIWI/index.html
@@ -107,6 +107,10 @@
                 </div>
             </div>
 
+            <div class="tabela-button">
+                <a href="tabela.html" class="btn">Clique aqui para saber sobre marcos do ENIAC!</a>
+            </div>
+
     </main>
     <footer>2025 - Site desenvolvido por Bruno F. Santos - ETEC MCM - Todos os Direitos Reservados ©</footer>
     
